--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,18 @@
 [project]
 name = "pr-pro-programs"
 version = "0.1.0"
-description = "Add your description here"
+description = "Collection of programs for the pr-pro package."
 readme = "README.md"
 authors = [
     { name = "Roland Stolz", email = "roland.stolz9@gmail.com" }
 ]
 requires-python = ">=3.13"
 dependencies = [
-    "pr-pro"
+    "pr-pro[vis]"
 ]
 
 [tool.uv.sources]
 pr-pro = { git = "https://github.com/RolandStolz/pr_pro.git", branch = "main" }
-
-[tool.uv]
-package = true
 
 [project.scripts]
 abah = "pr_pro_programs.abah.streamlit_app:main"
